# parametric_umap

./: README.md  pyproject.toml  requirements.txt
examples/: swiss_roll.ipynb
parametric_umap/: __init__.py  core.py
parametric_umap/datasets/: covariates_datasets.py  edge_dataset.py
parametric_umap/models/: mlp.py
parametric_umap/utils/: graph.py  losses.py
