[project]
name = "parametric-umap"
version = "0.1.1"
description = "A streamlined and fast implementation of parametric UMAP using PyTorch and FAISS"
authors = [
    {name = "Francesco Carli",email = "francesco.carli94@gmail.com"}
]
license = {text = "BSD License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch_cuda124"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "torch_cuda124"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.per-file-ignores]
"test/*" = ["S101", "D100", "D103", "D104"]


